<resources>
    <!-- Titles for the various activities -->
    <string name="app_name">recippy</string>
    <string name="activity_login">Login</string>
    <string name="activity_register_user">Register</string>
    <string name="activity_forgot_password">Forgot password</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_about">About</string>
    <string name="activity_add_recipe">Add Recipe</string>
    <string name="activity_favorite_recipes">Favorite Recipes</string>
    <string name="activity_show_all_recipes">All Recipes</string>
    <string name="activity_show_recipe">Recipe</string>
    <string name="activity_update_recipes">Update Recipe</string>

    <!-- Edit profile -->
    <string name="edit_name">Full name</string>
    <string name="edit_email">Email</string>
    <string name="edit_age">Age</string>
    <string name="edit_save">SAVE PROFILE</string>
    <string name="error_name">Please enter your full name</string>
    <string name="error_email">Please enter your email</string>
    <string name="error_age">Please enter your age</string>
    <string name="profile_updated">Profile updated</string>
    <string name="edit_title">Edit Profile</string>

    <!-- Register user -->
    <string name="register_user">Register</string>
    <string name="register_user_email">Email</string>
    <string name="register_user_password">Password</string>
    <string name="register_user_age_hint">Age</string>
    <string name="register_user_confirm_password">Confirm password</string>
    <string name="register_user_first_name">Full name</string>
    <string name="register_user_name">Full name is required</string>
    <string name="register_user_email_required">Email is required</string>
    <string name="register_user_email_invalid">Email is invalid</string>
    <string name="register_user_password_required">Password is required</string>
    <string name="register_user_password_invalid">Password is invalid, min 6 characters is required</string>
    <string name="register_user_age">Age is required</string>

    <!-- forgot password -->
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_email_required">Email is required</string>
    <string name="forgot_password_reset">Reset password</string>


    <!-- Login -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_register">Register</string>
    <string name="login_error_message">Wrong email or password</string>
    <string name="check_email">Check your email. To verify your account!</string>
    <string name="minimum_length">Minimum length of password should be 6</string>
    <string name="password_error">Password is required</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="email_error2">Email is required</string>

    <!-- Login hints -->

    <!-- Profile -->
    <string name="txtProfile_welcome">Welcome</string>
    <string name="txtProfile_name">Name</string>
    <string name="txtProfile_email">Email</string>
    <string name="txtProfile_age">Age</string>
    <string name="btnShow_all_recipes">Show all recipes</string>
    <string name="btnAdd_recipe">Add recipe</string>
    <string name="btnFavorite_recipes">Favorite recipes</string>
    <string name="btnAbout">About</string>
    <string name="btnLogout">Logout</string>


    <!-- About -->
    <string name="txtAbout">Hey there! &#127858;</string>
    <string name="txtAbout1">This app is made by a group of students at USN Ringerike. We are studying software engineering and this is an app that is a part of course MOB3000 Mobile Application Development.</string>
    <string name="txtAbout2">The app is made to help you save your recipes and to create favorite lists of your favorite recipes. Feel free to contact us by pressing "contact us" if you have any questions, issues or just want to reach out. </string>
    <string name="txtAbout3">We hope that you will enjoy using our app! Bon appétit from Even, Alex and Bjørnar &#128526; &#129367;</string>
    <string name="btnContact_us">Contact us</string>

    <!-- Copyright(c) -->
    <string name="txtCopyrightAbout">Copyright \u00a9 recippy. All rights reserved.</string>

    <!-- Activity_add_ingredient -->
    <string name="recipe_added">Recipe added!! &#127858;</string>
    <string name="add_ingredient_first">Add ingredient first!</string>
    <string name="ingredient_error">Enter all details correctly!</string>
    <string name="recipe_name">Recipe name is required!</string>
    <string name="recipe_description">Description is required!</string>
    <string name="recipe_step_by_step">Step by step is required!</string>
    <string name="recipe_cuisine">Cuisine is required!</string>
    <string name="error_message">Something wrong happened!</string>
    <string name="vegan">Vegan</string>
    <string name="not_vegan">Not Vegan</string>
    <string name="ingredient_add">Ingredient</string>
    <string name="amount_add">Amount</string>
    <string name="add_ingredient_button">Add ingredient</string>

    <!-- Activity_add_recipe -->
    <string name="add_recipe">Add recipe</string>
    <string name="recipe_name_add">Recipe name</string>
    <string name="recipe_description_hint">Description</string>
    <string name="recipe_step_by_step_hint">Step by step</string>
    <string name="recipe_vegan">Vegan</string>
    <string name="recipe_not_vegan">Not Vegan</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add_recipe_button">Add recipe</string>
    <string name="save_recipe">Save recipe</string>
    <string name="cuisine_recipe">Cuisine</string>
    <string name="ingredient_button">Add ingredient</string>
    <string name="unit_error">!!!</string>
    <string name="cuisine_error">Choose cuisine!</string>

    <!-- Recipe activity -->
    <string name="ingredient_label">Name</string>
    <string name="amount_label">Amount</string>
    <string name="recipe_activity_name">Recipe name</string>
    <string name="recipe_activity_description">Description</string>
    <string name="recipe_activity_step_by_step">Step by step</string>
    <string name="recipe_activity_cuisine">Cuisine</string>
    <string name="recipe_activity_ingredient">Ingredients</string>
    <string name="recipe_activity_names">Name</string>
    <string name="recipe_activity_button_delete">Delete recipe</string>
    <string name="recipe_activity_button_update">Update recipe</string>
    <string name="recipe_activity_switch">Add to favorite</string>

    <!-- Activity_favorite_recipes -->
    <string name="search_favorite">Search</string>
    <string name="recycler_name">Recipe name</string>
    <string name="recycler_description">Description</string>
    <string name="delete_recipe_toast">Delete recipe?</string>

    <!-- Activity_update_recipe -->
    <string name="update_recipe">Update recipe</string>
    <string name="update_recipe_button">Update recipe</string>
    <string name="update_recipe_name">Recipe name</string>
    <string name="update_recipe_description">Description</string>
    <string name="update_recipe_step_by_step">Step by step</string>
    <string name="update_recipe_cuisine">Cuisine</string>
    <string name="update_recipe_vegan">Vegan</string>
    <string name="update_recipe_not_vegan">Not Vegan</string>
    <string name="update_recipe_not_favorite">Not favorite</string>
    <string name="update_recipe_favorite">Favorite</string>
    <string name="update_recipe_ingredient">Ingredient</string>
    <string name="update_recipe_amount">Amount</string>
    <string name="update_recipe_add_ingredient">Add ingredient</string>
    <string name="update_recipe_add_ingredient_button">Add ingredient</string>
    <string name="update_recipe_switch">Add to favorite</string>
    <string name="update_recipe_delete">Delete recipe</string>
    <string name="update_recipe_delete_ingredient">Delete ingredient</string>
    <string name="update_recipe_update">Confirm changes</string>


    <!-- Toast messages -->
    <string name="toast_recipe_added">Recipe added!</string>
    <string name="toast_recipe_deleted">Recipe deleted!</string>
    <string name="toast_recipe_updated">Recipe updated!</string>
    <string name="toast_recipe_added_favorites">Recipe added to favorites!</string>
    <string name="toast_recipe_removed_favorites">Recipe removed from favorites!</string>
    <string name="toast_error">Something wrong happened!</string>
    <string name="profile_message">Logged out!</string>
    <string name="toast_register">User has been registered successfully!</string>
    <string name="toast_register_fail">Failed to register! Try again!</string>
    <string name="toast_recipe_message">No recipes found</string>

    <!-- Email messages -->
    <string name="email_message_required">Email required!</string>
    <string name="email_message_invalid">Please provide valid email!</string>
    <string name="email_message_request">Check your email to reset your password!</string>
    <string name="email_message_error">Try again! Something wrong happened!</string>

    <!-- BuilderMessages -->
    <string name="builder_message_yes">YES</string>
    <string name="builder_message_no">NO</string>



    <!-- Spinner cousine -->
    <string-array name="cousine_array">
        <item>Cuisine</item>
        <item>Italian</item>
        <item>Indian</item>
        <item>Norwegian</item>
        <item>French</item>
        <item>Mexican</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Spanish</item>
        <item>Colombian</item>
        <item>Turkish</item>
        <item>Thai</item>
        <item>Arab</item>
        <item>Lebanese</item>
        <item>Maroccan</item>
        <item>Korean</item>
        <item>Vietnamese</item>
        <item>Malaysian</item>
        <item>Russian</item>
        <item>Ethiopian</item>
        <item>Polish</item>
        <item>German</item>
    </string-array>

    //TODO: Add more strings here
    <!-- Spinner unit -->
    <string-array name="unit_array">
        <item>Unit</item>
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
        <item>oz</item>
        <item>cup</item>
        <item>tbsp</item>
        <item>tsp</item>
        <item>pinch</item>
        <item>dash</item>
        <item>slice</item>
        <item>can</item>
        <item>package</item>
        <item>handful</item>
        <item>head</item>
        <item>stalk</item>
        <item>leaf</item>
        <item>pint</item>
        <item>quart</item>
        <item>gallon</item>
        <item>dozen</item>
        <item>bag</item>
        <item>box</item>
        <item>jar</item>
        <item>pcs</item>
    </string-array>
</resources>
