<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RecipeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-52dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_logo_foreground" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:layout_editor_absoluteX="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recipeCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/customborder"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update_recipe_name"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/recipeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/update_recipe_description"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/recipeDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/update_recipe_step_by_step"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/recipeStepByStep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/update_recipe_cuisine"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/recipeCousine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/update_recipe_cuisine"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/ingredientList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/txtVeganSwitch">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnAddIngredient"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/ingredient_button"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:visibility="visible"
                                app:backgroundTint="#323232"
                                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:shapeAppearanceOverlay="@style/buttonShape" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateRecipe"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/update_recipe_update"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/veganSwitch"
            app:shapeAppearanceOverlay="@style/buttonShape" />

        <Switch
            android:id="@+id/veganSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/update_recipe_not_vegan"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/favoriteSwitch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Switch
            android:id="@+id/favoriteSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/update_recipe_not_favorite"
            app:layout_constraintBottom_toTopOf="@+id/btnUpdateRecipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/veganSwitch"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>